--- a/k8s/np-svc.yaml
+++ b/k8s/np-svc.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ci-svc
+  name: np-svc
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: my-nginx
   ports:
     - name: http
-      port: 80
+      port: 8080
+      targetPort: 80
       nodePort: 30002
